--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
         <p class="text-right font-semibold">投資元本: <span id="initialCapital"></span></p>
       </div>
     </div>
+    <!-- 想定条件・概要セクション -->
+<div class="mt-10 bg-white rounded shadow p-4 text-sm text-gray-700 leading-relaxed">
+  <h3 class="text-lg font-bold mb-2 text-gray-800">本シミュレーションについて</h3>
+  <ul class="list-disc pl-5 space-y-1">
+    <li><strong>想定リターン：</strong> 年間の平均的な運用利回り（％）を意味します。</li>
+    <li><strong>想定リスク：</strong> 年ごとの利回りのばらつき（標準偏差、％）を示します。</li>
+    <li>設定されたリターンとリスクに基づき、1000回のシナリオをランダム生成して将来の資産額を予測しています（モンテカルロ法）。</li>
+    <li>このシミュレーション結果は将来の運用成果を保証するものではなく、参考値としてご活用ください。</li>
+  </ul>
+</div>
   </div>
 
 <script>
